public_html/layout/nouveau/menu/horizontal-cascading.css
{menuname} .menu-horizontal-cascading {
    margin:             0;
    padding:            0;
    list-style:         none;
}
{menuname} .menu-horizontal-cascading {
    width:              100%;
    height:             auto;
    z-index:            500;
    background:{tl_menu_background_color}
{!if tl_menu_background_image}
    url({site_url}/images/menu/{tl_menu_background_image}) repeat
{!endif}
    ;
}
{menuname} .menu-horizontal-cascading a {
    text-decoration:    none;
    white-space:        nowrap;
    display:            block;
{!if alignment}
    float:              {alignment};
{!endif}
{!if tl_menu_line_height}
    line-height:        {tl_menu_line_height};
{!endif}
{!if tl_menu_font_weight}
    font-weight:        {tl_menu_font_weight};
{!endif}
{!if tl_menu_line_height}
    height:             {tl_menu_line_height};
{!endif}
{!if tl_menu_font_size}
    font-size:          {tl_menu_font_size};
{!endif}
{!if tl_menu_element_padding}
    padding:            {tl_menu_element_padding};
{!endif}
{!if tl_menu_text_color}
    color:              {tl_menu_text_color};
{!endif}
}
{menuname} .menu-horizontal-cascading ul {
    position:           absolute;
    top:                -999em;
{!if tl_menu_element_width}
    width:              {tl_menu_element_width};
{!endif}
}
{menuname} .menu-horizontal-cascading li {
    list-style:         none;
    position:           relative;
    display:            block;
    margin:             0;
    padding:            0;
{!if alignment}
    float:              {alignment};
{!endif}
}
{menuname} .menu-horizontal-cascading ul ul {
{!if ch_menu_element_border_left_width}
    border-left:        {ch_menu_element_border_left_width} solid {ch_menu_element_border_left_color};
{!endif}
{!if ch_menu_element_border_right_width}
    border-right:       {ch_menu_element_border_right_width} solid {ch_menu_element_border_right_color};
{!endif}
}
{menuname} .menu-horizontal-cascading li li {
    background:         none;
    margin:             0;
    position:           relative;
    float:              none;
    width:              100%;
    background:         {ch_menu_background_color}
{!if ch_menu_background_image}
    url({site_url}/images/menu/{ch_menu_background_image}) repeat
{!endif}
    ;
{!if ch_menu_element_border_top_width}
    border-top:         {ch_menu_element_border_top_width} solid {ch_menu_element_border_top_color};
{!endif}
{!if ch_menu_element_border_bottom_width}
    border-bottom:      {ch_menu_element_border_bottom_width} solid {ch_menu_element_border_bottom_color};
{!endif}
}
{menuname} .menu-horizontal-cascading li li a:hover {
    background:         none;
}
{menuname} .menu-horizontal-cascading li li a {
{!if ch_menu_font_family}
    font-family:        {ch_menu_font_family};
{!endif}
{!if ch_menu_font_size}
    font-size:          {ch_menu_font_size};
{!endif}
{!if ch_menu_font_weight}
    font-weight:        {ch_menu_font_weight};
{!endif}
    display:            block;
    text-decoration:    none;
    float:              none;
{!if ch_menu_line_height}
    height:             {ch_menu_line_height};
    line-height:        {ch_menu_line_height};
{!endif}
{!if ch_menu_element_text_indent}
    text-indent:        {ch_menu_element_text_indent};
{!endif}
    width:              98%;
    margin-left:        1%;
    padding:            0;
}
{menuname} .menu-horizontal-cascading li:hover {
    z-index:            510;
    background:         {tl_menu_background_color_hover}
{!if tl_menu_text_hover_image}
    url(images/menu/{tl_menu_text_hover_image}) repeat
{!endif}
    ;
    color:              {tl_menu_text_color_hover};
}
{menuname} .menu-horizontal-cascading li li:hover {
    z-index:            510;
    background:         {ch_menu_background_color_hover}
{!if ch_menu_text_hover_image}
    url(images/menu/{ch_menu_text_hover_image}) repeat
{!endif}
    ;
    color:              {ch_menu_text_color_hover};
}
{menuname} .menu-horizontal-cascading li ul {
    float:              none;
    left:               -999em;
    position:           absolute;
{!if ch_menu_element_width}
    width:              {ch_menu_element_width};
{!endif}
    z-index:            500;
}
{menuname} .menu-horizontal-cascading li:hover ul,
{menuname} .menu-horizontal-cascading li.sfHover ul {
    left:               -1px;
{!if ch_menu_offset}
    top:                {ch_menu_offset};
{!endif}
}
{menuname} .menu-horizontal-cascading li:hover li ul,
{menuname} .menu-horizontal-cascading li.sfHover li ul,
{menuname} .menu-horizontal-cascading li li:hover li ul,
{menuname} .menu-horizontal-cascading li li.sfHover li ul,
{menuname} .menu-horizontal-cascading li li li:hover li ul,
{menuname} .menu-horizontal-cascading li li li.sfHover li ul {
    top:                -999em;
}
{menuname} .menu-horizontal-cascading li li:hover ul,
{menuname} .menu-horizontal-cascading li li.sfHover ul,
{menuname} .menu-horizontal-cascading li li li:hover ul,
{menuname} .menu-horizontal-cascading li li li.sfHover ul,
{menuname} .menu-horizontal-cascading li li li li:hover ul,
{menuname} .menu-horizontal-cascading li li li li.sfHover ul {
{!if ch_menu_submenu_offset}
    left:               {ch_menu_submenu_offset};
{!endif}
    top:                -1px;
    z-index:            500;
}
{menuname} .menu-horizontal-cascading li:hover a,
{menuname} .menu-horizontal-cascading li.sfHover a,
{menuname} .menu-horizontal-cascading li:hover a:hover,
{menuname} .menu-horizontal-cascading li.sfHover a:hover {
{!if tl_menu_text_color_hover}
    color:              {tl_menu_text_color_hover};
{!endif}
}
{menuname} .menu-horizontal-cascading li:hover li:hover a:hover,
{menuname} .menu-horizontal-cascading li.sfHover li.sfHover a:hover {
{!if ch_menu_text_color_hover}
    color:              {ch_menu_text_color_hover};
{!endif}
}
{menuname} .menu-horizontal-cascading ul ul {
{!if ch_menu_background_color}
    background:         {ch_menu_background_color};
{!endif}
{!if ch_menu_element_border_top_width}
    border-left:        {ch_menu_element_border_top_width} solid {ch_menu_element_border_top_color};
{!endif}
{!if ch_menu_element_border_bottom_width}
    border-right:       {ch_menu_element_border_bottom_width} solid {ch_menu_element_border_bottom_color};
{!endif}
}
{menuname} .menu-horizontal-cascading li li a.parent,
{menuname} .menu-horizontal-cascading li li a.parent:hover {
{!if ch_menu_parent_image}
    background:transparent url({site_url}/images/menu/{ch_menu_parent_image})  no-repeat scroll 95% 50%;
{!endif}
}
{menuname} .menu-horizontal-cascading {
    float:              left;
}
/* for right aligned menus */
{menuname} .menu-horizontal-cascading-right li {
    float:              right;
}
<!--[if IE 7]>
{menuname} .menu-horizontal-cascading {
    *width:100%;
}
{!if iefixwidth}
{menuname} .menu-horizontal-cascading li ul {
    *width:{iefixwidth}px;
}
{!endif}
<![endif]-->
/*
{menuname} .dummyclass1 {
}
*/

